# torchhtk

./: CMakeLists.txt  README.md  htkutils.cpp  init.lua
example/: example.lua  feature.plp  testmemory.lua
